# edge-developer-kit-reference-scripts

./: CONTRIBUTING.md  README.md  main_installer.sh  print_summary_table.sh
docs/: autogenbom.md  faq.md  getting-started.md  troubleshooting.md  use-cases.md
usecases/ai/edge-ai-demo-studio/: .gitignore  README.md  setup.ps1  setup.sh  start.sh
usecases/ai/edge-ai-demo-studio/docs/: DEPLOYMENT.md  DEVELOPMENT.md
usecases/ai/edge-ai-demo-studio/electron/: README.md  package-lock.json  package.json  splash.html
usecases/ai/edge-ai-demo-studio/frontend/: .env.example  .gitignore  package-lock.json  package.json  setup.sh  tsconfig.json
usecases/ai/edge-ai-demo-studio/frontend/src/: payload-types.ts
usecases/ai/edge-ai-demo-studio/scripts/: package.ps1  package.sh  setup_thirdparty.ps1
usecases/ai/edge-ai-demo-studio/workers/: setup.ps1
usecases/ai/edge-ai-demo-studio/workers/embedding/: main.py  requirements.txt  start.ps1
usecases/ai/edge-ai-demo-studio/workers/lipsync/: pyproject.toml  setup.ps1
usecases/ai/edge-ai-demo-studio/workers/lipsync/modules/base/: constants.py
usecases/ai/edge-ai-demo-studio/workers/lipsync/modules/lipsync/wav2lip/: wav2lip_avatar_generator.py
usecases/ai/edge-ai-demo-studio/workers/lipsync/modules/texttospeech/: kokoro_tts.py
usecases/ai/edge-ai-demo-studio/workers/lipsync/scripts/: query_device.py
usecases/ai/edge-ai-demo-studio/workers/text-to-speech/malaya/: pyproject.toml  setup.ps1  setup.sh
usecases/ai/edge-ai-demo-studio/workers/text-to-speech/malaya/overrides/: malaya_normalizer_rules.py  malaya_preprocessing.py
usecases/ai/edge-ai-demo-studio/workers/text-to-speech/malaya/schemas/: __init__.py
usecases/ai/edge-ai-studio/: .gitignore  README.md  install_dependencies.sh  setup.ps1  setup.sh  start.ps1  start.sh
usecases/ai/edge-ai-studio/docs/: DEPLOYMENT.md
usecases/ai/edge-ai-studio/electron/: README.md  electron-fuses.js  forge.config.js  main.js  package-lock.json  package.json  preload.js  setup.ps1  setup.sh  splash.html  splash.js
usecases/ai/edge-ai-studio/frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  setup.ps1  setup.sh
usecases/ai/edge-ai-studio/scripts/: package.ps1  package.sh  setup_thirdparty.ps1  setup_thirdparty.sh
usecases/ai/edge-ai-studio/workers/: setup.ps1  setup.sh
usecases/ai/edge-ai-studio/workers/text-to-speech/kokoro/: .gitignore  0001-PATCH-Added-KokoroTTS-OpenVINO-support.patch  README.md  main.py  pyproject.toml  setup.ps1  setup.sh  utils.py
usecases/ai/edge-ai-studio/workers/text-to-speech/malaya/: main.py  pyproject.toml  setup.ps1  setup.sh
usecases/ai/edge-ai-studio/workers/text-to-speech/malaya/overrides/: malaya_speech_tts.py
usecases/ai/edge-ai-studio/workers/text-to-speech/malaya/schemas/: __init__.py
usecases/ai/microservices/image-classification/: README.md
usecases/ai/microservices/object-detection/: README.md
usecases/ai/microservices/speech-to-text/: README.md
usecases/ai/microservices/text-to-image/: README.md
usecases/ai/microservices/text-to-speech/: README.md
usecases/ai/microservices/vision-language-model/: README.md
usecases/ai/openvino/: README.md
usecases/ai/openwebui-ollama/: README.md
usecases/ai/rag-toolkit/: README.md
usecases/ai/smart-parking/: README.md
usecases/ai/video_summarization/: README.md
(+177 files in other folders)
