[project]
name = "malayatts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "malaya",
    "malaya-speech",
    "markupsafe==2.1.5",
    "psutil>=7.1.0",
    "pysastrawi>=1.2.0",
    "pytorch-triton-xpu==3.4.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
malaya-speech = { git = "https://github.com/mesolitica/malaya-speech" }
malaya = { git = "https://github.com/mesolitica/malaya.git" }
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
pytorch-triton-xpu = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/xpu"
explicit = true