[project]
name = "kokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "huggingface-hub>=0.35.1",
    "loguru>=0.7.3",
    "misaki[en,ja,zh]==0.9.3",
    "numpy>=2.2.6",
    "openvino==2025.1.0",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "pydub>=0.25.1",
    "resampy>=0.4.3",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
